test/libhyperion/syntaxTests/functionTypes/function_type_variable_external_internal.hyp
contract test {
    function fa(bytes memory) public { }
    function(bytes memory) external internal a = fa;
}
// ----
// TypeError 4888: (61-108): External function types are not supported with this address size: address (512 bits) plus selector (32 bits) exceeds the VM word size (512 bits).
